--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,14 @@
           <button id="btnTraduzir" class="btn btn-primary" type="button" name="btnTraduzir">Traduzir para binário</button>
         </div>
         <div class="col-lg-4">
-          <button id="btnExecutar" class="btn btn-sucess" type="button" name="btnExecutar">Executar</button>
+          <button id="btnExecutar" class="btn btn-success" type="button" name="btnExecutar">Executar</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div id="webconsole">
+          </div>
+          <button id="btnClearConsole" type="button" name="button">Clear</button>
         </div>
       </div>
 
